fix feedback z-index bug

--- a/app/stylesheets/partials/_widgets.scss
+++ b/app/stylesheets/partials/_widgets.scss
@@ -117,6 +117,7 @@ ul.button-bar {
   color: white !important;
   font-weight: bold;
   font-size: 18px;
+  z-index: 10000;
 }
 
 #map {
